Animation fixes | settings panel overflow fixed

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,5 +1,5 @@
 * {
-    transition: all 0.15s;
+    /* transition: all 0.15s; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 13px;
