--- a/assets/scss/header/_common.scss
+++ b/assets/scss/header/_common.scss
@@ -88,7 +88,7 @@
                     &:active,
                     &:hover {
                         transition: background-color 0.2s;
-                        background-color: theme-color-level(primary, 5);
+                        background-color: darken($primary, 5%);
                     }
                 }
                 a.nav-link {
