--- a/assets/scss/menu/_common.scss
+++ b/assets/scss/menu/_common.scss
@@ -10,6 +10,7 @@
         width: $full-sidebar-width;
         z-index: 10;
         background-color: $sidemenu-bg;
+        transition: all 0.15s;
         .navbar {
             @include var-bg-color("primary");
             a{
@@ -136,7 +137,7 @@
     }
 }
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(sm) {
     .main-wrapper {
         .sidebar {
             margin-left: -$full-sidebar-width;
